# internal/handler/user.go
@@ -19,6 +19,17 @@ func NewUserHandler(userService service.UserService) *UserHandler {
 	}
 }
 
+// @BasePath /api/v1
+// @Summary Create a new user
+// @Description Create a new user with the input payload
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param request body entity.User true "Create User Input"
+// @Success 201
+// @Failure 400 {object} errors.ErrorHandler
+// @Failure 500 {object} errors.ErrorHandler
+// @Router /users [post]
 func (h *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var user entity.User
 	err := json.NewDecoder(r.Body).Decode(&user)
@@ -38,6 +49,17 @@ func (h *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 }
 
+// @BasePath /api/v1
+// @Summary Get user by email
+// @Description Get user by email
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param email path string true "User Email"
+// @Success 200 {object} entity.User
+// @Failure 404 {object} errors.ErrorHandler
+// @Failure 500 {object} errors.ErrorHandler
+// @Router /users/{email} [get]
 func (h *UserHandler) GetUserByEmail(w http.ResponseWriter, r *http.Request) {
 	email := chi.URLParam(r, "email")
 	user, err := h.userService.FindUserByEmail(email)
